# weaive

./: .cursor-changes  .cursorignore  .gitattributes  .gitignore  .mcp.json  .mcp.json.windows  .sidecar-figma-to-prd-sync.json  CLAUDE.md  GOALS_REFETCH_FIX.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  README.md  SECURITY_FIXES_SUMMARY.md  cloc.json  mvp.md  package-lock.json
weave-api/: .env.example  .env.test  .env.test.example  .gitignore  Procfile  README.md  clear_remote_completion.py  create_test_user.py  main.py  nixpacks.toml  pyproject.toml  railway.json  run-dev.ps1  run-dev.sh
weave-api/app/: __init__.py  main.py
weave-api/app/api/: __init__.py  account_router.py  admin.py  ai_chat_router.py  ai_router.py  analytics.py  captures.py  daily_summary_router.py  health.py  insights.py  insights_README.md  journal_router.py  memories_router.py  notifications.py  onboarding.py  stats.py  subscription_router.py  transcribe.py  user.py
weave-api/app/config/: ai_chat_config.py  ai_personality_config.py  extended_personalities.py  subscription_config.py
weave-api/app/core/: __init__.py  config.py  deps.py  errors.py  stt_config.py
weave-api/app/middleware/: rate_limit.py
weave-api/app/models/: __init__.py  ai_chat_models.py  analytics.py  base.py  journal.py  onboarding.py  user_profile.py
weave-api/app/schemas/: __init__.py  bind.py  goal.py
weave-api/app/services/: __init__.py  ai_orchestrator.py  ai_provider_base.py  analytics.py  checkin_scheduler.py  (+8 more)
weave-api/migrations/: 20251223_fix_function_search_path_security.sql
weave-api/scripts/: README.md  apply_cascade_fix.py  backfill_user_profiles.py  check_cascade.py  check_fk_constraint.py  check_user_accounts.py  check_user_token.py  cleanup_orphaned_profiles.py  create_user_profile.py  populate_all_users_consistency.py  populate_consistency_data.py  reset_user_account.py  setup_test_user.py  test_ai_service.py  test_api_complex_question.py  test_health_manual.py  test_identity_bootup.py  test_rls_security.py  verify_cascade_delete.py  verify_cost_tracking.py
weave-api/tests/: __init__.py  conftest.py  demo_all_streaming.py  factories.py  manual_streaming_test.py  quick_stream_test.py  test_ai_chat_api.py  test_ai_chat_context_api.py  test_ai_integration.py  test_ai_provider_base.py  test_ai_service.py  test_api_endpoints_story_1_5_2.py  test_auth_security.py  test_base_model.py  test_captures_api.py  test_context_builder.py  test_context_integration.py  test_daily_summary_api.py  test_error_handling_utils.py  test_gdpr_compliance_api.py  test_health.py  test_insights_api.py  test_integration.py  test_journal_router.py  test_modify_personality_tool.py  test_onboarding.py  test_origin_story.py  test_personality_service.py  test_response_quality_checker.py  test_story_1_5_2_backend_standardization.py  test_story_6_2_integration.py  test_streaming.py  test_stt_service.py  test_subscription_api.py  test_tool_registry.py  test_transcribe_api.py  test_vision_service.py
(+945 files in other folders)
