[project]
name = "weave-api"
version = "0.1.0"
description = "Backend API for Weave MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "boto3>=1.42.14",
    "fastapi>=0.124.4",
    "openai>=2.13.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "supabase>=2.27.0",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.38.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
    "pytest>=8.0.0",
    "httpx>=0.27.0",  # Required for TestClient
]
