[project]
name = "weave-api"
version = "0.1.0"
description = "Backend API for Weave MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "assemblyai>=0.48.4",
    "boto3>=1.42.14",
    "fastapi>=0.124.4",
    "imageio-ffmpeg>=0.5.1",
    "google-generativeai>=0.8.6",
    "openai>=2.13.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.45",
    "supabase>=2.27.0",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.38.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (require external services)",
    "slow: marks tests as slow (require AI services, heavy imports, >30s runtime)",
]
asyncio_mode = "auto"  # Enable pytest-asyncio for async tests
asyncio_default_fixture_loop_scope = "function"
timeout = 120  # Default timeout: 2 minutes per test (handles slow imports in WSL)
timeout_method = "thread"  # Use thread-based timeout (safer for pytest)

[dependency-groups]
dev = [
    "ruff>=0.14.9",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",  # Async test support for pytest
    "pytest-cov>=6.0.0",  # Code coverage plugin for pytest
    "httpx>=0.27.0",  # Required for TestClient
    "faker>=33.1.0",  # Fake data generation for integration tests
    "pytest-timeout>=2.4.0",
]
